# t-task_mai

./: .gitignore  CMakeLists.txt
include/: transportTask.h
lib/MenuWork/: MenuWork.cpp  MenuWork.h
src/: main.cpp  transportTask.cpp
